--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "description": "Blank template for Nativescript application using Svelte",
   "license": "Apache-2.0",
   "repository": "https://github.com/halfnelson/svelte-native-template",
+  "scripts": {
+    "test": "jest --watch __test__",
+    "test:watch": "npm run test -- --watch"
+  },
   "dependencies": {
     "@nativescript/core": "~7.0.0",
     "@nativescript/theme": "~2.3.3",
@@ -15,12 +19,20 @@
     "@nativescript/webpack": "3.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-typescript": "^7.13.0",
     "@nativescript/android": "7.0.0",
     "@nativescript/ios": "8.0.0",
+    "@types/jest": "^26.0.23",
+    "babel-core": "^7.0.0-beta.3",
+    "babel-jest": "^27.0.0-next.8",
+    "babel-preset-env": "^7.0.0-beta.3",
+    "jest": "^27.0.4",
     "svelte": "~3.24.1",
     "svelte-loader-hot": "~0.3.1",
     "svelte-native-preprocessor": "^0.2.0",
     "svelte-preprocess": "^4.0.8",
+    "ts-jest": "^27.0.3",
     "typescript": "~4.0.2"
   },
   "gitHead": "c06800e52ee1a184ea2dffd12a6702aaa43be4e3",
