--- a/app/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/app/App_Resources/Android/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
 		android:allowBackup="true"
 		android:icon="@drawable/icon"
 		android:label="@string/app_name"
-		android:theme="@style/AppTheme">
+    android:theme="@style/AppTheme"
+    android:requestLegacyExternalStorage="true"
+    android:networkSecurityConfig="@xml/network_security_config"
+    tools:ignore="UnusedAttribute">
 
 		<activity
 			android:name="com.tns.NativeScriptActivity"
