--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "dependencies": {
     "@nativescript/core": "~7.0.0",
     "@nativescript/theme": "~2.3.3",
-    "svelte-native": "~0.9.1",
-    "@nativescript/webpack": "3.0.0"
+    "@nativescript/webpack": "3.0.0",
+    "nativescript-permissions": "^1.3.11",
+    "svelte-native": "~0.9.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.14.4",
