--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nativescript/core": "~7.0.0",
     "@nativescript/theme": "~2.3.3",
     "@nativescript/webpack": "3.0.0",
+    "@types/node": "^15.12.2",
     "nativescript-permissions": "^1.3.11",
     "svelte-native": "~0.9.1"
   },
