--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nativescript/webpack": "3.0.0",
     "@types/node": "^15.12.2",
     "nativescript-permissions": "^1.3.11",
+    "nativescript-videoplayer": "^5.0.1",
     "svelte-native": "~0.9.1"
   },
   "devDependencies": {
