--- a/.migration_backup/package.json
+++ b/.migration_backup/package.json
@@ -4,7 +4,7 @@
   "templateType": "App template",
   "author": "David Pershouse (https://github.com/halfnelson)",
   "version": "7.0.0",
-  "main": "./app/app.ts",
+  "main": "app.js",
   "description": "Blank template for Nativescript application using Svelte",
   "license": "Apache-2.0",
   "repository": "https://github.com/halfnelson/svelte-native-template",
@@ -13,8 +13,9 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
-    "@nativescript/core": "~8.0.0",
+    "@nativescript/core": "~7.0.0",
     "@nativescript/theme": "~2.3.3",
+    "@nativescript/webpack": "3.0.0",
     "@types/node": "^15.12.2",
     "nativescript-permissions": "^1.3.11",
     "nativescript-videoplayer": "^5.0.1",
@@ -23,9 +24,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-typescript": "^7.13.0",
-    "@nativescript/android": "8.0.0",
+    "@nativescript/android": "7.0.0",
     "@nativescript/ios": "8.0.0",
-    "@nativescript/webpack": "~5.0.0-beta.0",
     "@types/jest": "^26.0.23",
     "babel-core": "^7.0.0-beta.3",
     "babel-jest": "^27.0.0-next.8",
